app/assets/stylesheets/layouts/main.css.sass
#main
  background: $primary-bg-color

.fill-layout
  position: absolute
  top: 0
  bottom: 0
  left: 0
  right: 0
  overflow: hidden

#main-wrapper
  width: 100%

#header
  position: absolute
  top: 0
  left: 0
  right: 0
  height: $header-height
  line-height: $header-height

#navigation
  position: absolute
  top: $header-height
  left: 0
  right: 0
  height: $nav-height

#main
  position: absolute
  top: $header-height + $nav-height
  left: 0
  right: 0
  bottom: 0

.content, .form
  padding: 20px

ul.unstyled
  list-style: none
  margin: 0
  padding: 0

ul.horizontal
  list-style: none
  margin: 0
  padding: 0
  li
    display: inline-block


@include phone

  #main-wrapper
    position: absolute
    top: 0
    bottom: 0
    left: 0
    width: 100% //set as fixed on mobiles on load
    overflow-y: auto
    -webkit-overflow-scrolling: touch
    background: $primary-bg-color
    @include transition(all, 0.2s)
    &.navigation-visible
      left: 80%

  #header
    height: $header-height-phone

  #navigation
    width: $nav-width-phone
    top: 0
    left: 0
    right: 0
    width: auto
    overflow: hidden
    bottom: auto

  #main
    left: 0
    top: $header-height-phone

  h1
    text-align: center
    color: $light-grey
    margin: 0
    margin-top: -$header-height-phone
    line-height: $header-height-phone
    font-size: 1em

